Opened 13 years ago
Closed 12 years ago
#3058 closed defect (fixed)
Stats overwritten in console
| Reported by: | Elliott | Owned by: | |
|---|---|---|---|
| Priority: | minor | Component: | ffmpeg |
| Version: | git-master | Keywords: | |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
When -stats is used with any log level less than "info", the stats line is overwritten by the next console line after the process is completed. We should add a line break after the stats at the end. I am using OS X 10.8.5.
$ ffmpeg -loglevel error -stats -i 1.mov -vn 1.mp4 File '1.mp4' already exists. Overwrite ? [y/N] y $ 49.85 bitrate= 246.2kbits/s $
Change History (5)
comment:1 by , 13 years ago
comment:2 by , 13 years ago
| Component: | undetermined → FFmpeg |
|---|---|
| Priority: | normal → minor |
| Reproduced by developer: | set |
| Status: | new → open |
Reproducible with:
$ ./ffmpeg -loglevel warning -stats -i tests/lena.pnm -f null -
comment:5 by , 12 years ago
| Resolution: | → fixed |
|---|---|
| Status: | open → closed |
Note:
See TracTickets
for help on using tickets.



It makes more sense if I post the whole thing, without stripping host name and username. The output is partially overwritten.