ffmpeg: Fix last newline at log level less than "info"

Fixes Ticket3058

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>